Every OSR exit on ARM results in a crash https://bugs.webkit.org/show_bug.cgi?id=87307

Reviewed by Geoffrey Garen.

* dfg/DFGThunks.cpp:
(JSC::DFG::osrExitGenerationThunkGenerator):



Canonical link: https://commits.webkit.org/105033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118239 268f45cc-cd09-0410-ab3c-d52691b4dbfc